fixed keyboard loading issue, changed modal width on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -315,7 +315,7 @@ body {
 }
 
 .ReactModal__Content {
-  width: min(500px, 90vw);
+  width: min(500px, 95vw);
   height: fit-content;
   margin: auto;
   animation: fadeIn 0.15s ease-in;
